add runWithTitan to starling build